--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.002   2021-07-19  Released-By: PERLANCAR; Urgency: low
+
+        - No functional changes.
+
+	- [build] Rebuild with updated Pod::Weaver plugin [-Sah::Schemas] to
+          properly list schemas in distribution.
+
+
 0.001   2020-04-19  Released-By: PERLANCAR
 
         - First release.
